objects/CPQB2BQueueItem__c.object
<CustomObject>
    <fields>
        <fullName>Action_Context__c</fullName>
        <label>Action Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorCount__c</fullName>
        <externalId>true</externalId>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorMessageShort__c</fullName>
        <externalId>true</externalId>
        <label>Error Message (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationID__c</fullName>
        <label>Integration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkToRecord__c</fullName>
        <formula>IF (
            ISBLANK(RecordId__c),
            &apos;No Record Involved&apos;,
            HYPERLINK(&quot;/&quot; &amp; RecordId__c , &apos;View Record&apos;, &quot;_blank&quot;)
            )</formula>
        <label>Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Marked as External Id to create an index.</description>
        <externalId>true</externalId>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_After__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Do not process the Queue Item until after this data. Default now</description>
        <inlineHelpText>Do not process the Queue Item until after this data. Default now</inlineHelpText>
        <label>Process After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>Contains the SFDC Id of the record to be processed.</description>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;NEW&quot;</defaultValue>
        <description>Marked as External Id to create an index.</description>
        <externalId>true</externalId>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Error</label>
        <type>Checkbox</type>
    </fields>
    <label>CPQB2B Queue Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QI-{000000000}</displayFormat>
        <label>CQPB2BQueue Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQB2B Queue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Count_by_One_Only</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ErrorCount__c &lt;&gt; 0
            , ErrorCount__c &lt;&gt; PRIORVALUE(ErrorCount__c)+1
            , ErrorCount__c &lt;&gt; PRIORVALUE(ErrorCount__c))</errorConditionFormula>
        <errorDisplayField>ErrorCount__c</errorDisplayField>
        <errorMessage>Error Count can only increment by 1.</errorMessage>
    </validationRules>
</CustomObject>